# AnonymousWebChat

./: .gitignore  .gitmodules  CMakeLists.txt  DB.cpp  PROBLEMS.txt  Participant.cpp  README.md  TODO.txt  main.cpp  server.cpp  serverDB.cpp  serverSIGNUP.cpp  simplepost.cpp  users.txt
frontend/: chat.html  sign_in.html  sign_up.html
frontend/css/: SignIn.css
frontend/js/: CheckSignIn.js
html_src/: chat.html  file_change.cpp  sign_in.html  sign_up.html
include/: DB.hpp  Participant.hpp  Resource.hpp  Resource.inl  Router.hpp  Router.inl  Server.hpp  Server.inl  ServerCore.hpp  ServerDB.hpp  SessionList.hpp  htmlParser.hpp  htmlUtils.hpp  server.hpp
src/: DB.cpp  Participant.cpp  Resource.cpp  Resources.cpp  Router.cpp  Server.cpp  ServerCore.cpp  ServerDB.cpp  SessionList.cpp  htmlParser.cpp  htmlUtils.cpp  main.cpp
src/tests/: CMakeLists.txt  htmlParser_test.cpp  test2.html  test3.html
